--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@ SKILLS
                 <div>
                   <a href="https://www.youtube.com/channel/UCQDymKHbrQaVm6zQkEhJsKg"><img style="height:40px;width:40px;" src="youtube.png"><br/><lable style="color:black;text-decoration: none;">Youtube</label></a>
                </div>
+	       <div>
+                  <a href="https://dribbble.com/divyanshi01"><img style="height:40px;width:40px;" src="dribble.png"><br/><lable style="color:black;text-decoration: none;">Dribble</label></a>
+               </div>
             </div>
         </div>
     
