--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container text-center">
         <object
-          data='resume.pdf'
+          data='RESUME(@).pdf'
           type="application/pdf"
           width="500"
           height="678"
